--- a/app/src/app/credit-card/credit-card-list/credit-card-list.component.html
+++ b/app/src/app/credit-card/credit-card-list/credit-card-list.component.html
@@ -1,7 +1,7 @@
 <p>credit-card-list works!</p>
 
-<div style="display: flex;">
-    <div *ngFor="let creditCardInfo of creditCards$ | async">
+<div style="display: flex; flex-wrap: wrap;">
+    <div *ngFor="let creditCardInfo of creditCards$ | async" style="margin:10px">
         <app-credit-card-list-item [creditCardInfo]="creditCardInfo"></app-credit-card-list-item>
     </div>
 </div>
