--- a/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
+++ b/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
@@ -1,5 +1,7 @@
-<div>
-    <h4>{{creditCardInfo.card_number}}</h4>
-    <p>Holder: {{creditCardInfo.cardholder_name}}</p>
-    <p>Issuer: {{creditCardInfo.issuer}}</p>
+<div style="width: 200px;">
+    <a routerLink="" style="text-decoration: none; color: #000;">
+        <h4>{{creditCardInfo.card_number}}</h4>
+        <p>Holder: {{creditCardInfo.cardholder_name}}</p>
+        <p>Issuer: {{creditCardInfo.issuer}}</p>
+    </a>
 </div>
