--- a/app/src/app/navigation-bar/navigation-bar.component.html
+++ b/app/src/app/navigation-bar/navigation-bar.component.html
@@ -1,1 +1,7 @@
-<p>navigation-bar works!</p>
+<nav class="nav">
+    <div class="navLinks">
+        <a routerLink="">Home</a>
+        <a routerLink="credit-cards">Credit Cards</a>
+        <a routerLink="transactions">Transactions</a>
+    </div>
+</nav>
