--- a/app/src/app/credit-card/credit-card-list/credit-card-list.component.html
+++ b/app/src/app/credit-card/credit-card-list/credit-card-list.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; flex-wrap: wrap;">
+<div class="creditCardItem">
     <div *ngFor="let creditCardInfo of creditCards$ | async" style="margin:25px">
         <app-credit-card-list-item [creditCardInfo]="creditCardInfo"></app-credit-card-list-item>
     </div>
