--- a/app/src/app/navigation-bar/navigation-bar.component.html
+++ b/app/src/app/navigation-bar/navigation-bar.component.html
@@ -2,6 +2,7 @@
     <div class="navLinks">
         <a routerLink="">Home</a>
         <a routerLink="credit-cards">Credit Cards</a>
+        <a routerLink="add-credit-card">Add Credit Card</a>
         <a routerLink="transactions">Transactions</a>
     </div>
 </nav>
