--- a/app/src/app/navigation-bar/navigation-bar.component.html
+++ b/app/src/app/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,7 @@
 <nav class="nav">
     <div class="navLinks">
-        <a routerLink="">Home</a>
-        <a routerLink="credit-cards">Credit Cards</a>
-        <a routerLink="add-credit-card">Add Credit Card</a>
-        <a routerLink="transactions">Transactions</a>
+        <a class="navLink" routerLink="">Home</a>
+        <a class="navLink" routerLink="add-credit-card">Add Credit Card</a>
+        <a class="navLink" routerLink="transactions">Transactions</a>
     </div>
 </nav>
