Delete credit card

--- a/app/src/app/credit-card/credit-card-details/credit-card-details.component.html
+++ b/app/src/app/credit-card/credit-card-details/credit-card-details.component.html
@@ -9,7 +9,7 @@
             <p>Issuer: {{creditCard.issuer}}</p>
         </div>
         <div style="align-self: center;">
-            <button>Delete credit card</button>
+            <button (click)="deleteCreditCard()">Delete credit card</button>
         </div>
     </div>
 
