--- a/app/src/app/transaction/transaction-add/transaction-add.component.html
+++ b/app/src/app/transaction/transaction-add/transaction-add.component.html
@@ -1,1 +1,49 @@
-<p>transaction-add works!</p>
+<form [formGroup]="createTransactionForm" (ngSubmit)="onSubmit()">
+    <div class="form-wrapper">
+        <h1>Add new transaction</h1>
+        <mat-form-field appearance="fill">
+            <mat-label for="credit_card_number">Choose Card</mat-label>
+            <mat-select type="text" formControlName="credit_card_number">
+                <mat-option *ngFor="let creditCard of creditCards$ | async" [value]="creditCard.card_number">
+                    {{creditCard.card_number}} ({{creditCard.cardholder_name}})
+                </mat-option>
+            </mat-select>
+            <mat-error *ngIf="hasRequiredError('credit_card_number')">
+                Card is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label for="amount">Amount</mat-label>
+            <input matInput type="text" placeholder="300" formControlName="amount">
+            <mat-error *ngIf="hasErrors('amount', ['mustBeInteger'])">
+                Amount must be an number
+            </mat-error>
+            <mat-error *ngIf="hasRequiredError('amount')">
+                Amount is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label for="currency">Choose Currency</mat-label>
+            <mat-select type="text" formControlName="currency">
+                <mat-option *ngFor="let currency of currenciesAvailable" [value]="currency">
+                    {{currency}}
+                </mat-option>
+            </mat-select>
+            <mat-error *ngIf="hasRequiredError('currency')">
+                Currency is <strong>required</strong>
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label for="comment">Comment</mat-label>
+            <textarea matInput type="text" placeholder="This transaction is for my mother..." formControlName="comment">
+            </textarea>
+        </mat-form-field>
+        <button mat-raised-button color="primary" type="submit" [disabled]="createTransactionForm.invalid">Submit</button>
+        <p style="margin-top: 5px; color: green" *ngIf="transactionCreated">Transaction was created successfully</p>
+    </div>
+</form>
+
+<pre *ngIf="false">
+    {{this.createTransactionForm.value | json}}
+    {{this.createTransactionForm.status}}
+</pre>
