--- a/app/src/app/transaction/transaction-add/transaction-add.component.html
+++ b/app/src/app/transaction/transaction-add/transaction-add.component.html
@@ -35,7 +35,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill">
             <mat-label for="comment">Comment</mat-label>
-            <textarea matInput type="text" placeholder="This transaction is for my mother..." formControlName="comment">
+            <textarea matInput type="text" placeholder="Monthly rent to my landlord" formControlName="comment">
             </textarea>
         </mat-form-field>
         <button mat-raised-button color="primary" type="submit" [disabled]="createTransactionForm.invalid">Submit</button>
