--- a/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
+++ b/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
@@ -1,9 +1,12 @@
 <mat-card style="width: 250px;">
     <a [routerLink]="'credit-cards/' + creditCardInfo.card_number.toString()"
         style="text-decoration: none; color: #000;">
-        <mat-card-title>{{creditCardInfo.cardholder_name}}</mat-card-title>
+        <mat-card-title>{{creditCardInfo.card_number}}</mat-card-title>
         <mat-card-content>
-            <p>{{creditCardInfo.card_number}} {{creditCardInfo.issuer}}</p>
+            {{creditCardInfo.cardholder_name}}
         </mat-card-content>
+        <mat-card-footer>
+            Issued by: {{creditCardInfo.issuer}}
+        </mat-card-footer>
     </a>
 </mat-card>
