--- a/app/src/app/credit-card/credit-card-details/credit-card-details.component.html
+++ b/app/src/app/credit-card/credit-card-details/credit-card-details.component.html
@@ -14,14 +14,8 @@
     </div>
 
     <h2>Transactions</h2>
-    <div style="display: flex; flex-wrap: wrap; margin: -10px 0 0 -10px">
-        <mat-card *ngFor='let transaction of transactions$ | async' style="margin:10px; width: 400px">
-            <mat-card-title>{{transaction.currency}} {{transaction.amount}}</mat-card-title>
-            <mat-card-subtitle>{{transaction.date | date}}</mat-card-subtitle>
-            <mat-card-content>
-                <p>{{transaction.comment}}</p>
-            </mat-card-content>
-        </mat-card>
+    <div *ngIf="(transactions$ | async) as transactions">
+        <app-transaction-list [transactions]="transactions"></app-transaction-list>
     </div>
 </div>
 
