--- a/app/src/app/transaction/transaction-list-item/transaction-list-item.component.html
+++ b/app/src/app/transaction/transaction-list-item/transaction-list-item.component.html
@@ -1,8 +1,13 @@
 <mat-card style="width: 400px">
-    <mat-card-title>{{transaction.currency}} {{transaction.amount}}</mat-card-title>
+    <div style="display: flex; align-items: center; justify-content: space-between;">
+        <mat-card-title>{{transaction.currency}} {{transaction.amount}}</mat-card-title>
+        <button mat-icon-button (click)="deleteTransaction()"><mat-icon>delete</mat-icon></button>
+    </div>
     <mat-card-subtitle>{{transaction.date | date}}</mat-card-subtitle>
-    <mat-card-subtitle>Card Holder: {{transaction.credit_card.cardholder_name}}</mat-card-subtitle>
-    <mat-card-subtitle>Card Number: {{transaction.credit_card.card_number}}</mat-card-subtitle>
+    <div *ngIf="extendedInformation">
+        <mat-card-subtitle>Card Holder: {{transaction.credit_card.cardholder_name}}</mat-card-subtitle>
+        <mat-card-subtitle>Card Number: {{transaction.credit_card.card_number}}</mat-card-subtitle>
+    </div>
     <mat-card-content>
         <p>{{transaction.comment}}</p>
     </mat-card-content>
