--- a/app/src/app/transaction/transaction-list/transaction-list.component.html
+++ b/app/src/app/transaction/transaction-list/transaction-list.component.html
@@ -1,3 +1,3 @@
 <div style="display: flex; flex-wrap: wrap; margin: 0 -10px 0 -10px">
-    <app-transaction-list-item *ngFor="let transaction of transactions" [transaction]="transaction" style="margin: 10px"></app-transaction-list-item>
+    <app-transaction-list-item *ngFor="let transaction of transactions" [transaction]="transaction" [extendedInformation]="extendedInformation" style="margin: 10px"></app-transaction-list-item>
 </div>
