--- a/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
+++ b/app/src/app/credit-card/credit-card-list-item/credit-card-list-item.component.html
@@ -1,5 +1,5 @@
 <mat-card style="width: 250px;">
-    <a [routerLink]="'credit-cards/' + creditCardInfo.card_number.toString()"
+    <a [routerLink]="(isInsideHomeComponent ? 'credit-cards/' : '') + creditCardInfo.card_number.toString()"
         style="text-decoration: none; color: #000;">
         <mat-card-title>{{creditCardInfo.card_number}}</mat-card-title>
         <mat-card-content>
